// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadCards /> renders with beta 1`] = `
<DocumentFragment>
  <div
    class="download-cards__Container-k88p0k-0 kLDOWf"
  >
    <a
      class="bp3-button bp3-intent-primary download-cards__DownloadButton-k88p0k-2 xTeIF"
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          Download v10.4.0
        </span>
        <span
          class="download-cards__Description-k88p0k-1 fLmetT"
        >
          Linux (x64)
        </span>
        <span
          class="download-cards__Description-k88p0k-1 fLmetT"
        >
          Stable, for most users
        </span>
      </span>
    </a>
    <a
      class="bp3-button download-cards__DownloadButton-k88p0k-2 xTeIF"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0/poi-10.5.0.7z"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <div>
          Download v10.5.0
        </div>
        <span
          class="download-cards__Description-k88p0k-1 fLmetT"
        >
          Linux (x64)
        </span>
        <span
          class="download-cards__Description-k88p0k-1 fLmetT"
        >
          Beta, for new features
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders with invalid target 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c3 {
  display: block;
  font-size: 1rem;
}

.c2 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c2.c2 {
  background-color: #F5F8FA;
  color: #182026;
  background-image: none;
  border: 1px solid #182026;
}

.c1 + .c1 {
  margin-left: 2rem;
}

<div
    class="c0"
  >
    <a
      class="bp3-button bp3-intent-primary c1 c2"
      data-testid="download-stable-version"
      href="https://github.com/poooi/poi/releases"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          Download v10.4.0
        </span>
        <span
          class="c3"
        >
          chiba
        </span>
        <span
          class="c3"
        >
          Stable, for most users
        </span>
      </span>
    </a>
    <a
      class="bp3-button c1 c2"
      href="https://github.com/poooi/poi/releases"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <div>
          Download v10.5.0
        </div>
        <span
          class="c3"
        >
          chiba
        </span>
        <span
          class="c3"
        >
          Beta, for new features
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders without beta 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c3 {
  display: block;
  font-size: 1rem;
}

.c2 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c2.c2 {
  background-color: #F5F8FA;
  color: #182026;
  background-image: none;
  border: 1px solid #182026;
}

.c1 + .c1 {
  margin-left: 2rem;
}

<div
    class="c0"
  >
    <a
      class="bp3-button bp3-intent-primary c1 c2"
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          Download v10.4.0
        </span>
        <span
          class="c3"
        >
          Linux (x64)
        </span>
        <span
          class="c3"
        >
          Stable, for most users
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;
